# rec-engine

./: .gitignore  CLAUDE.md  README.md  demo.ipynb  index.html  pyproject.toml
assets/: article.md  plan.md
assets/prompts/: prompt_section1.txt  prompt_section2.txt  prompt_section3.txt  prompt_section4.txt  prompt_section5.txt  prompt_section6.txt  prompt_section7.txt
src/rec_engine/: helpers.py  ingest.py
terraform/: elastic_serverless.tf  outputs.tf  terraform.tfvars.sample  variables.tf
