[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "rec-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "elasticsearch>=9.4.1",
    "jupyter>=1.1.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
]
